crates/tui/src/view/snapshots/tui__view__panel__tests__changed_files_card.snap
---
source: crates/tui/src/view/panel_tests.rs
expression: "super::super::text(&draw_panel(&app))"
---

 ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
  …path/to/the/parser.rs +120 −15
  src/a.rs                  +3 −3
  2 files changed  +123 −18
 ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
