crates/tui/src/view/snapshots/tui__view__panel__tests__context_bar_marker_at_the_trigger.snap
---
source: crates/tui/src/view/panel_tests.rs
expression: "super::super::text(&draw_panel(&app))"
---

  directory  …sers/you/work/fiber
  model  test/model · thinking hi
  context  50% of 1.0k tokens
  ▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆░░░░░░░░░│░░░░░░
  │ handoff at 800 tokens: Fiber
  writes a summary and the work
  continues in a fresh context
  tokens in / out  500 / 0
  cache hits  0%
