crates/tui/src/view/snapshots/tui__view__panel__tests__jobs_card_collapsed_and_expanded.snap
---
source: crates/tui/src/view/panel_tests.rs
expression: "super::super::text(&buf)"
---

  2 jobs running
    build the workspace
    test the workspace
