crates/tui/src/view/snapshots/tui__view__panel__tests__panel_scrolled.snap
---
source: crates/tui/src/view/panel_tests.rs
expression: "super::super::text(&buf)"
---

  line 04
  line 05
  line 06
  line 07
  line 08
  line 09
  line 10
  line 11
  line 12
  line 13
  line 14
  line 15
  line 16
  line 17
  line 18
  line 19
  line 20
  line 21
  line 22
  line 23
  line 24
  line 25
  line 26
  line 27
  line 28
  line 29
  line 30
  line 31
  line 32
  line 33
  line 34
  line 35
  line 36
  line 37
  line 38
  line 39
  line 40
  line 41
  line 42
