crates/tui/src/view/snapshots/tui__view__panel__tests__session_card_at_the_panel_floor.snap
---
source: crates/tui/src/view/panel_tests.rs
expression: "super::super::text(&draw_panel(&app))"
---

 ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
  directory  …/you/work/fiber
  model  test/model · thinkin
  context  50% of 1.0k tokens
  ▆▆▆▆▆▆▆▆▆▆▆▆▆░░░░░░░░│░░░░░
  │ handoff at 800 tokens:
  Fiber writes a summary and
  the work continues in a
  fresh context
  tokens in / out  1.1k / 200
  cache hits  9%
  cost billed  $0.41
  cost on subscription  $1.10
  output speed, last reply  2
  turns  1
  tools  relay down
 ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
