crates/tui/src/view/snapshots/tui__view__panel__tests__session_card_with_budget.snap
---
source: crates/tui/src/view/panel_tests.rs
expression: "screen(&app, 160, 40)"
---

                                                                                                                               ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
                                                                                                                                directory  …sers/you/work/fiber
                                                                                                                                model  test/model · thinking h…
                                                                                                                                ▆▆▆▆▆▆▆▆░░░░░░░░░           500
                                                                                                                                50% of window
                                                                                                                                tokens in / out  1.1k / 200
                                                                                                                                cache hits  9%
                                                                                                                                cost billed  $0.41 of $5.00
                                                                                                                                cost on subscription  $1.10
                                                                                                                               ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀








                                                                                                                              ⋮
                                                                                                                              ⋮
                                                                                                                              ⋮















▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ › █
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
