crates/tui/src/view/snapshots/tui__view__panel__tests__session_card_without_trigger.snap
---
source: crates/tui/src/view/panel_tests.rs
expression: "super::super::text(&draw_panel(&app))"
---

 ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
  directory  …sers/you/work/fiber
  model  test/model · thinking hi
  context  50% of 1.0k tokens
  ▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆░░░░░░░░░░░░░░░░
  tokens in / out  1.1k / 200
  cache hits  9%
  cost billed  $0.41
 ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
