crates/tui/src/view/snapshots/tui__view__panel__tests__widget_card.snap
---
source: crates/tui/src/view/panel_tests.rs
expression: "super::super::text(&buf)"
---

 ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
  plan · tasks
  one
  two
  three
 ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
